creating react app

--- a/toolbox-ui/src/App.css
+++ b/toolbox-ui/src/App.css
@@ -25,7 +25,11 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #ffffff;
+}
+
+.App-link:hover {
+  color: #dadada;
 }
 
 @keyframes App-logo-spin {
